fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -213,6 +213,9 @@ margin-top: -8%;
   .nature-img img {
     width: 300px;
   }
+  #theButton-2 {
+    font-size: 1.6rem;
+  }
   p {
     font-size: 2.2rem;
     }
@@ -223,6 +226,10 @@ margin-top: -8%;
       position: fixed;
       max-width:105px;
       height: auto;
+    }
+    .generator {
+      padding: 40px;
+
     }
     
 }
